--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bass Tuner - Contact</title>
+    <title>Electric Guitar Tuner - Contact</title>
     <meta name="robots" content="noindex">
     <style>
         body {
@@ -76,7 +76,7 @@
 <body>
 
     <div class="container">
-        <h1>Bass Tuner</h1>
+        <h1>Electric Guitar Tuner</h1>
         <p><strong>Support Email</strong></p>
         <p><a href="mailto:olivetapps@outlook.com">olivetapps@outlook.com</a></p>
     </div>
