--- a/term-of-use.html
+++ b/term-of-use.html
@@ -119,7 +119,7 @@
 
     <div class="container">
         <h1>Terms and Conditions</h1>
-        <p><em>Last updated: 2025-03-22</em></p>
+        <p><em>Last updated: 2025-05-09</em></p>
         <p>Please read these terms and conditions carefully before using our service.</p>
 
         <h2>Interpretation and Definitions</h2>
@@ -131,7 +131,7 @@
         <p>For the purposes of these Terms and Conditions:</p>
         <ul>
             <li>
-                <strong>Application</strong> means the software program provided by the Company downloaded by You on any electronic device, named Bass Tuner.
+                <strong>Application</strong> means the software program provided by the Company downloaded by You on any electronic device, named Electric Guitar Tuner.
             </li>
             <li>
                 <strong>Application Store</strong> means the digital distribution service operated and developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded.
